--- a/thirdpage.html
+++ b/thirdpage.html
@@ -11,7 +11,7 @@
             <h1> Вселенная "Колеса Времени"</h1>
             <img src="koleso.jpg" align="right" width="200" height="300" style=" border: 3px solid ##FFFF00;">
         </center>
-        <a href="firstpage.html"> <img  src="main.png" width="50" height="50" alt="Главная"> </a>
+        <a href="index.html"> <img  src="main.png" width="50" height="50" alt="Главная"> </a>
                     <h3 id=chrono2>Хронология:</h3>
                     <div>
                     <nav id="flex4">
