--- a/fourthpage.html
+++ b/fourthpage.html
@@ -11,7 +11,7 @@
             <h1> Вселенная "Брендона Сандерсона"</h1>
             <img src="arb.jpg" align="right" width="200" height="300" style=" border: 3px solid ##FFFF00;">
         </center>
-        <a href="firstpage.html"> <img  src="main.png" width="50" height="50" alt="Главная"> </a>
+        <a href="index.html"> <img  src="main.png" width="50" height="50" alt="Главная"> </a>
                     <h3 id=chrono3 >Хронология :</h3>
                     <div>
                     <nav id="flex5">
