--- a/index.html
+++ b/index.html
@@ -33,15 +33,17 @@
                     </main>
             </div>
              <h5>
+                  <center><canvas id="canvas" width=200 height=200></canvas></center>
+                  <script src="./js/main.js" type="module"></script>
                         <form action="https://www.google.com/search" method="get">
                             <input type="text" name="q">
                             <input type="submit" value="Найти">
                         </form>
                     </h5>
                     <h6>
-                        <a href="secondpage.html"> <img  src="vkk.jpg" width="100" height="141" alt="Властелин Колец"> </a>
-                        <a href="thirdpage.html"> <img src="kvv.jpg" width="100" height="141" alt="Колесо Времени"> </a>
-                        <a href="fourthpage.html"> <img src="abb.jpg" width="100" height="141" alt="Архив Буресвета"> </a>
+                        <a href="secondpage.html"> <img  src="vkk.jpg" width="200" height="282" alt="Властелин Колец"> </a>
+                        <a href="thirdpage.html"> <img src="kvv.jpg" width="200" height="282" alt="Колесо Времени"> </a>
+                        <a href="fourthpage.html"> <img src="abb.jpg" width="200" height="282" alt="Архив Буресвета"> </a>
                     </h6>
     </body>
 </html>
