--- a/secondpage.html
+++ b/secondpage.html
@@ -11,7 +11,7 @@
             <h1> Вселенная "Властелина Колец"</h1>
             <img src="ring.png" align="right" width="140" height="124" style=" border: 3px solid transparent;">
         </center>
-        <a href="index.html"> <img  src="main.png" width="50" height="50" alt="Главная"> </a>
+        <a href="https://mooney70.github.io/"> <img  src="main.png" width="50" height="50" alt="Главная"> </a>
                     <h3 id=chrono>Хронология:</h3>
                     <div>
                     <nav id="flex2">
