--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             </div>
              <h5>
                   <center><canvas id="canvas" width=200 height=200></canvas></center>
-                  <script src="./js/main.js" type="module"></script>
+                  <hr>
+        <center><button id="btn_start_ai"><p><strong>HELP</strong></p></button></center>
+        <script src="./js/main.js" type="module"></script>
                         <form action="https://www.google.com/search" method="get">
                             <input type="text" name="q">
                             <input type="submit" value="Найти">
